update config & readme
