# tdm-be/routers/config.ts
@@ -19,7 +19,15 @@ const router = express.Router();
  *           type: array
  *           items:
  *             $ref: '#/components/schemas/SwaggerApi'
- *           example: [{'url':'https://data-enrichment.services.istex.fr', 'tags':[{'name':'data-enrichment','excluded':['/v1/collect','/v1/lda','/v1/retrieve','/v1/mock-error-async','/v1/mock-error-sync']}]}]
+ *           example: [{'url':'https://data-computer.services.istex.fr', 'tags':[{'name':'data-computer','excluded':['/v1/collect','/v1/retrieve','/v1/mock-error-async','/v1/mock-error-sync']}]}]
+ *         mailSuccess:
+ *           type: 
+ *             $ref: '#/components/schemas/Mail'
+ *           example: {'subject':'Objet du mail succès', 'text':'Vous pouvez télécharger le fichier enrichi à l&apos;adresse ci-dessous' }
+ *         mailError:
+ *           type: 
+ *             $ref: '#/components/schemas/Mail'
+ *           example: {'subject':'Objet du mail d&apos;erreur', 'text':'Une erreur s&apos;est produite lors de l&apos;enrichissement' }
  * 
  *     SwaggerApi:
  *       type: object
@@ -42,6 +50,13 @@ const router = express.Router();
  *           items:
  *             type: string
  *           example: ['csv']
+ *     Mail:
+ *       type: object
+ *       properties:
+ *         subject:
+ *           type: string
+ *         text:
+ *           type: string
  * 
  */
 
