# tdm-be/swagger-config.json
@@ -85,10 +85,10 @@
             },
             "example": [
               {
-                "url": "https://data-enrichment.services.istex.fr",
+                "url": "https://data-computer.services.istex.fr",
                 "tags": [
                   {
-                    "name": "data-enrichment",
+                    "name": "data-computer",
                     "excluded": [
                       "/v1/collect",
                       "/v1/lda",
@@ -100,6 +100,24 @@
                 ]
               }
             ]
+          },
+          "mailSuccess": {
+            "type": {
+              "$ref": "#/components/schemas/Mail"
+            },
+            "example": {
+              "subject": "Objet du mail succès",
+              "text": "Vous pouvez télécharger le fichier enrichi à l&apos;adresse ci-dessous"
+            }
+          },
+          "mailError": {
+            "type": {
+              "$ref": "#/components/schemas/Mail"
+            },
+            "example": {
+              "subject": "Objet du mail d&apos;erreur",
+              "text": "Une erreur s&apos;est produite lors de l&apos;enrichissement"
+            }
           }
         }
       },
@@ -133,6 +151,17 @@
             "example": [
               "csv"
             ]
+          }
+        }
+      },
+      "Mail": {
+        "type": "object",
+        "properties": {
+          "subject": {
+            "type": "string"
+          },
+          "text": {
+            "type": "string"
           }
         }
       }
